--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img class="logo" src="WhatsApp Image 2024-10-27 at 11.24.35 AM.jpeg" alt="Logo">
+            <img class="logo" src="IMG-20250206-WA0300.jpg" alt="Logo">
         </div>
         <div class="header">
             Facebook Security
